--- a/client/src/components/users/registration/registration.css
+++ b/client/src/components/users/registration/registration.css
@@ -1,6 +1,23 @@
-register-container {
+.register-container {
+  border: 1px solid red;
   display: flex;
-  /* flex-direction: column; */
-  align-items: left;
-  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: left;
+}
+
+.input {
+  white-space: nowrap;
+  /* text-align: center; */
+  border: solid 2px;
+  border-bottom-color: #fcf7f2;
+  border-right-color: #fcf7f2;
+  border-left-color: #535353;
+  border-top-color: #535353;
+  border-radius: 2px;
+  padding: 8px 18px;
+  /* background: transparent; */
+  color: black;
+  margin: 5px;
+  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; */
 }
