--- a/client/src/components/users/registration/registration.css
+++ b/client/src/components/users/registration/registration.css
@@ -1,5 +1,5 @@
 .register-container {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -8,16 +8,70 @@
 
 .input {
   white-space: nowrap;
-  /* text-align: center; */
   border: solid 2px;
   border-bottom-color: #fcf7f2;
   border-right-color: #fcf7f2;
   border-left-color: #535353;
   border-top-color: #535353;
   border-radius: 2px;
-  padding: 8px 18px;
-  /* background: transparent; */
+  padding: 4px 9px;
   color: black;
   margin: 5px;
-  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; */
+}
+
+.input-icon-container {
+  display: flex;
+  border: solid 2px;
+  border-bottom-color: #fcf7f2;
+  border-right-color: #fcf7f2;
+  border-left-color: #535353;
+  border-top-color: #535353;
+  background: #fff;
+  align-items: center;
+  overflow: hidden;
+}
+
+.input-icon-container input {
+  outline: none;
+  border: none;
+  background: none;
+  width: 100%;
+  /* margin: 5px; */
+  padding: 4px 9px;
+}
+
+.input-icon-container .fa {
+  padding: 10px;
+}
+
+.reg-button {
+  white-space: nowrap;
+  text-align: center;
+  border: solid 2px;
+  border-top-color: #fcf7f2;
+  border-left-color: #fcf7f2;
+  border-right-color: #535353;
+  border-bottom-color: #535353;
+  border-radius: 2px;
+  padding: 4px 11px;
+  background: transparent;
+  color: black;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.reg-button:hover {
+  background: #f9efe4;
+  color: #472d10;
+}
+
+.reg-button:active {
+  border-top-color: #535353;
+  border-left-color: #535353;
+  border-right-color: #fcf7f2;
+  border-bottom-color: #fcf7f2;
+}
+
+.pass-submit {
+  display: flex;
+  gap: 1rem;
 }
