--- a/client/src/components/users/registration/registration.css
+++ b/client/src/components/users/registration/registration.css
@@ -6,6 +6,32 @@
   justify-content: left;
 }
 
+.outer-form-container {
+  width: 28rem;
+  display: flex;
+  flex-direction: column;
+  margin: 2rem;
+  padding: 1rem;
+  border-top: 2px solid #ffffff;
+  border-left: 2px solid #ffffff;
+  border-bottom: 2px solid #cccccc;
+  border-right: 2px solid #cccccc;
+  background: #e5ffff;
+  /* filter: contrast(0.9); */
+  /* filter: blur(0px); */
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.reg-title {
+  text-align: left;
+  padding-left: 1rem;
+}
+
 .input {
   white-space: nowrap;
   border: solid 2px;
@@ -14,7 +40,7 @@
   border-left-color: #535353;
   border-top-color: #535353;
   border-radius: 2px;
-  padding: 4px 9px;
+  padding: 8px 9px;
   color: black;
   margin: 5px;
 }
@@ -29,6 +55,7 @@
   background: #fff;
   align-items: center;
   overflow: hidden;
+  margin: 5px;
 }
 
 .input-icon-container input {
@@ -36,7 +63,7 @@
   border: none;
   background: none;
   width: 100%;
-  /* margin: 5px; */
+
   padding: 4px 9px;
 }
 
@@ -54,6 +81,7 @@
   border-bottom-color: #535353;
   border-radius: 2px;
   padding: 4px 11px;
+  margin: 5px;
   background: transparent;
   color: black;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
