--- a/client/src/components/users/registration/registration.css
+++ b/client/src/components/users/registration/registration.css
@@ -1,5 +1,4 @@
 .register-container {
-  /* border: 1px solid red; */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -16,7 +15,7 @@
   border-left: 2px solid #ffffff;
   border-bottom: 2px solid #cccccc;
   border-right: 2px solid #cccccc;
-  background: #e5ffff;
+  background: #f9efe4;
   /* filter: contrast(0.9); */
   /* filter: blur(0px); */
 }
