--- a/client/src/components/search/bySubject/subject-api.css
+++ b/client/src/components/search/bySubject/subject-api.css
@@ -25,10 +25,10 @@
 .search-book-card {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: 250px;
   padding-left: 10px;
   margin: 10px;
-  /* border: 1px solid red; */
   border: 4px solid;
   border-top-color: #ffffff;
   border-left-color: #ffffff;
@@ -36,6 +36,9 @@
   border-right-color: #cccccc;
   border-style: groove;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 8px;
+}
+.card-book-user-options {
+  margin: 1rem;
 }
 
 .search-book-card img {
