--- a/client/src/components/users/registration/registration.css
+++ b/client/src/components/users/registration/registration.css
@@ -86,6 +86,7 @@
   background: transparent;
   color: black;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  cursor: url(../../../cursor/smolHand.png), pointer;
 }
 
 .reg-button:hover {
@@ -114,6 +115,7 @@
   background: #f7dfd4;
   color: black;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  cursor: url(../../../cursor/smolHand.png), pointer;
 }
 
 .submit-button:hover {
