separate the book carousel from the book details

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -4,7 +4,7 @@ body {
   word-spacing: 4px;
   background: #fcf7f2;
   /* background: #f6ffff; */
-  cursor: url(../cursor/smolArrow.png), auto;
+  /* cursor: url(../cursor/smolArrow.png), auto; */
 }
 
 .entire-site {
@@ -15,9 +15,9 @@ body {
   justify-content: center; */
   /* cursor: url(../cursor/arrow.png), auto; */
 }
-/* .App {
-  cursor: url("../cursor/hand.png"), auto;
-} */
+:root {
+  cursor: url(../cursor/smolArrow.png), auto;
+}
 a {
   text-decoration: none;
   cursor: url(../cursor/smolHand.png), pointer;
