--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -23,6 +23,7 @@
   color: black;
   margin: 5px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  cursor: url(../../cursor/smolHand.png), pointer;
 }
 
 .main-button-user {
