--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -8,7 +8,7 @@ body {
 }
 
 .entire-site {
-  width: 1200px;
+  max-width: 1200px;
   text-align: center;
   /* display: flex;
   align-items: center;
