--- a/client/src/components/users/userPage/bookDetails/book-details.css
+++ b/client/src/components/users/userPage/bookDetails/book-details.css
@@ -39,7 +39,7 @@
   background: transparent;
   color: black;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  cursor: url(../../../../), pointer;
+  /* cursor: url(../../../../), pointer; */
 }
 
 .remove-button:hover {
