--- a/client/src/components/users/userPage/displayUserBooks/display-user-books.css
+++ b/client/src/components/users/userPage/displayUserBooks/display-user-books.css
@@ -1,13 +1,52 @@
 .carousel-container {
   display: flex;
   width: 100%;
+  overflow-y: hidden;
+  /* position: relative; */
 }
 
 .carousel {
   display: flex;
+  width: 50vw;
   overflow-y: hidden;
   align-items: center;
-  gap: 40px;
+  gap: 20px;
+}
+@media (max-width: 800px) {
+  .carousel {
+    width: 30vw;
+  }
+}
+@media (max-width: 1000px) {
+  .carousel {
+    width: 65vw;
+  }
+}
+
+@media (max-width: 1200px) {
+  .carousel {
+    width: 75vw;
+  }
+}
+@media (max-width: 1400px) {
+  .carousel {
+    width: 75vw;
+  }
+}
+@media (max-width: 1500px) {
+  .carousel {
+    width: 70vw;
+  }
+}
+@media (max-width: 1600px) {
+  .carousel {
+    width: 65vw;
+  }
+}
+@media (max-width: 1800px) {
+  .carousel {
+    width: 55vw;
+  }
 }
 
 .carousel::-webkit-scrollbar {
