--- a/client/src/components/users/userPage/displayUserBooks/display-user-books.css
+++ b/client/src/components/users/userPage/displayUserBooks/display-user-books.css
@@ -2,24 +2,35 @@
   display: flex;
   width: 100%;
   overflow-y: hidden;
-  /* position: relative; */
 }
 
 .carousel {
   display: flex;
-  width: 50vw;
+  width: 46vw;
   overflow-y: hidden;
   align-items: center;
   gap: 20px;
 }
-@media (max-width: 800px) {
+
+@media (max-width: 1800px) {
   .carousel {
-    width: 30vw;
+    width: 57vw;
   }
 }
-@media (max-width: 1000px) {
+
+@media (max-width: 1600px) {
   .carousel {
-    width: 65vw;
+    width: 60vw;
+  }
+}
+@media (max-width: 1500px) {
+  .carousel {
+    width: 63vw;
+  }
+}
+@media (max-width: 1400px) {
+  .carousel {
+    width: 70vw;
   }
 }
 
@@ -28,27 +39,18 @@
     width: 75vw;
   }
 }
-@media (max-width: 1400px) {
+
+@media (max-width: 1000px) {
+  .carousel {
+    width: 72vw;
+  }
+}
+
+@media (max-width: 800px) {
   .carousel {
     width: 75vw;
   }
 }
-@media (max-width: 1500px) {
-  .carousel {
-    width: 70vw;
-  }
-}
-@media (max-width: 1600px) {
-  .carousel {
-    width: 65vw;
-  }
-}
-@media (max-width: 1800px) {
-  .carousel {
-    width: 55vw;
-  }
-}
-
 .carousel::-webkit-scrollbar {
   display: none;
 }
@@ -80,6 +82,7 @@
   border-left: 2px solid #ffffff;
   border-bottom: 2px solid #cccccc;
   border-right: 2px solid #cccccc;
+  cursor: url(../../../../cursor/smolHand.png), pointer;
 }
 
 .carousel-book span {
