--- a/client/src/components/users/userPage/bookDetails/book-details.css
+++ b/client/src/components/users/userPage/bookDetails/book-details.css
@@ -28,10 +28,6 @@
   border-left: 2px solid #cccccc;
   margin: 1rem;
 }
-/* 
-.comment-section button{
-
-} */
 
 .remove-button {
   white-space: nowrap;
@@ -47,7 +43,10 @@
   background: transparent;
   color: black;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  /* cursor: url(../../../../), pointer; */
+}
+
+.remove-button button {
+  cursor: url(../../../../cursor/smolHand.png) pointer;
 }
 
 .remove-button:hover {
@@ -63,7 +62,6 @@
 }
 
 .comment-container {
-  /* border: 1px solid red; */
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -76,7 +74,6 @@
   display: flex;
   flex-direction: column;
   padding-left: 8px;
-  /* border: 1px solid red; */
   align-items: flex-start;
   text-align: left;
   align-items: flex-start;
@@ -91,7 +88,6 @@
 }
 
 .new-comment-container {
-  /* border: 1px solid red; */
   margin: 5px;
   display: flex;
   align-items: center;
