--- a/client/src/components/users/userPage/displayUserBooks/display-user-books.css
+++ b/client/src/components/users/userPage/displayUserBooks/display-user-books.css
@@ -62,7 +62,7 @@
   justify-content: center;
   background: #f7dfd4;
   color: #472d10;
-  padding: 3px;
+  padding: 0.5rem;
   border: solid 2px;
   border-top-color: #fcf7f2;
   border-left-color: #fcf7f2;
