--- a/client/src/components/users/userPage/bookDetails/book-details.css
+++ b/client/src/components/users/userPage/bookDetails/book-details.css
@@ -9,12 +9,13 @@
 
 .book-detail-container {
   display: flex;
-  /* border: 1px solid red; */
+
   justify-content: center;
   gap: 40px;
 }
 
 .comment-section {
+  margin-top: 1rem;
   border-top: 2px solid #ffffff;
   border-left: 2px solid #ffffff;
   border-bottom: 2px solid #cccccc;
@@ -62,6 +63,9 @@
 }
 
 .comment-container {
+  border-right: 1px solid lightgray;
+  padding-right: 1rem;
+  margin-top: 1rem;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -94,4 +98,14 @@
 }
 .new-comment-container button {
   height: 35px;
+}
+
+.book-buttons {
+  padding-top: 1rem;
+  border-top: 1px solid lightgray;
+  margin: 1rem;
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  justify-content: center;
 }
