--- a/client/src/components/search/bySubject/subject-api.css
+++ b/client/src/components/search/bySubject/subject-api.css
@@ -14,12 +14,25 @@
   border-bottom: 2px solid #cccccc;
   border-right: 2px solid #cccccc;
 }
-
+@media (max-width: 400px) {
+  .search-form-container {
+    width: auto;
+    padding: 0;
+    margin: auto;
+  }
+}
 .results-main-container {
   display: flex;
   flex-wrap: wrap;
   margin: 2rem;
   gap: 1rem;
+}
+@media (max-width: 400px) {
+  .results-main-container {
+    width: auto;
+    margin: 4px;
+    gap: 2px;
+  }
 }
 
 .search-book-card {
@@ -37,8 +50,23 @@
   border-style: groove;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 8px;
 }
+
+@media (max-width: 400px) {
+  .search-book-card {
+    width: 150px;
+    padding: 0;
+    margin: 5px auto;
+    border: 1px solid;
+  }
+}
 .card-book-user-options {
   margin: 1rem;
+}
+
+@media (max-width: 400px) {
+  .card-book-user-options {
+    margin: auto;
+  }
 }
 
 .search-book-card img {
@@ -50,6 +78,15 @@
   border-left-color: #ffffff;
   border-bottom-color: #cccccc;
   border-right-color: #cccccc;
+}
+
+@media (max-width: 400px) {
+  .search-book-card img {
+    width: 60px;
+    padding: 0;
+    margin: auto;
+    border: 1px solid;
+  }
 }
 
 .search-book-card h3 {
