--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -24,9 +24,21 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+@media (max-width: 400px) {
+  .entire-site {
+    width: 350px;
+    flex-wrap: wrap;
+  }
+}
 .under-nav {
   margin: 20px;
   max-width: 1200px;
+}
+@media (max-width: 400px) {
+  .entire-site {
+    margin: 0;
+  }
 }
 :root {
   cursor: url(../cursor/smolArrow.png), auto;
